implemented initial version of spectral analysis in C++. If it takes too long to get this working, however, I'm just going to do it in scipy.

--- a/writing/UGRS2018Poster/UGRS2018Poster.tex
+++ b/writing/UGRS2018Poster/UGRS2018Poster.tex
@@ -40,13 +40,14 @@
             \centering
             \subfloat[]{{\includegraphics[width=0.4\linewidth]{images/ecolirps.png} }}
             \subfloat[]{{\includegraphics[width=0.4\linewidth]{images/Belousov-Zhabotinsky.jpg} }}
-            \caption{(a) Cyclic dominance in \textit{E. coli} (b) Spiral pattern formation in the Belousov-Zhabotinsky reaction \href{https://en.wikipedia.org/wiki/Belousov\%E2\%80\%93Zhabotinsky_reaction}{(source)}}
+            \caption{(a) Cyclic dominance in \textit{E. coli} (b) Spiral pattern formation in the Belousov-Zhabotinsky reaction.}
             \label{fig:images}
         \end{figure}
         A number of systems in the fields of ecology, epidemiology, and chemistry
-        follow a paradigm of cyclic dominance (e.g. certain subspecies of Lizards in
+        follow a paradigm of cyclic dominance or have been shown to exhibit noise-induced 
+        pattern formation (e.g. certain subspecies of Lizards in
         California \cite{sinervo96}, experiments on cyclically competing \textit{E. coli} bacteria \cite{kerr02}, and
-        Belousov-Zhabotinsky reaction ). The formation of noise-induced and -stabilized
+        the Belousov-Zhabotinsky reaction \cite{epstein96}). The formation of noise-induced and -stabilized
         spiral patterns in this class of system is captured by the spatially-extended 
         May-Leonard (ML) model. The formation of these spirals is in stark contrast
         to the species clustering seen in the Rock-Paper-Scissors (RPS) model.        
@@ -55,14 +56,15 @@
     \begin{block}{The RPS Model}
         The RPS Model is defined by the following binary reactions:
         \begin{itemize}
-            \item Replacement Reaction:
+            \item Replacement reaction:
             \begin{gather*}
                 AB \rightarrow AA\\
                 BC \rightarrow BB\\
                 CA \rightarrow CC\\            
                 \text{with rate } \zeta
             \end{gather*}
-            \item Pair Swap / Diffusion Reaction:
+
+            \item Pair swap / diffusion reaction:
             \begin{gather*}
                 XY \rightarrow YX \\
                 \text{where }X, Y \in \{A, B, C, \varnothing\} \text{ with rate } \epsilon_r
@@ -73,21 +75,21 @@
     \begin{block}{The May-Leonard Model}
         The ML Model is defined by the following binary reactions:
         \begin{itemize}
-            \item Predation Reaction:
+            \item Predation reaction:
             \begin{gather*}
                 AB \rightarrow A \varnothing \\
                 BC \rightarrow B \varnothing \\
                 CA \rightarrow C \varnothing \\            
                 \text{with rate } \sigma
             \end{gather*}
-            \item Reproduction Reaction:
+            \item Reproduction reaction:
             \begin{gather*}
                 A \varnothing \rightarrow AA\\
                 B \varnothing \rightarrow BB\\
                 C \varnothing \rightarrow CC\\            
                 \text{with rate } \mu
             \end{gather*}
-            \item Pair Swap / Diffusion Reaction:
+            \item Pair swap / diffusion reaction:
             \begin{gather*}
                 XY \rightarrow YX \\
                 X, Y \in \{A, B, C, \varnothing\} \text{ with rate } \epsilon_m
@@ -103,12 +105,12 @@
         initial net particle density). We limit each lattice point to contain at most
         one particle.
         The lattice is given a toroidal topology (i.e. $x=0 \text{ is equivalent 
-        to } x = L_x$ and likewise for $y$). The simulation then proceeds according 
+        to } x = L_x$ and likewise for $y = L_y$). The simulation then proceeds according 
         to the following algorithm:
 
         \begin{enumerate}
             \item A random coordinate $(x, y)$ is selected from a uniform distribution
-                and time is advanced by $\delta t = P^{-1}$ (where $P = L_x \times L_y$).
+                and time is advanced by $\delta t = N^{-1} $ (where $N = L_x \times L_y$).
             \item If that lattice point is not empty, then a nearest neighbor is chosen
                 at random. If the cell is empty, the simulation returns to step 1.
             \item One of the possible reactions (according to whether the lattice point
@@ -157,9 +159,11 @@
             \subfloat[$\epsilon_r=1.25$]{{\includegraphics[width=0.24\linewidth]{images/rps_1_25.jpg} }}
             \subfloat[$\epsilon_r=5.0$]{{\includegraphics[width=0.24\linewidth]{images/rps_5_0.jpg} }}
             \subfloat[$\epsilon_r=10.0$]{{\includegraphics[width=0.24\linewidth]{images/rps_10_0.jpg} }}
-            \caption{\centering Steady State snapshots. All lattices have $L_x = L_y = 256$: \\ (a)-(d) Typical ML pattern formation. $\sigma = \sigma = \mu = 1.0$  (e)-(h) Typical RPS pattern formation. $\zeta = 1.0$}
+            \caption{\centering Steady state snapshots. All lattices have $L_x = L_y = 256$: \\ (a)-(d) Typical ML pattern formation. $\sigma = \sigma = \mu = 1.0$  (e)-(h) Typical RPS pattern formation. $\zeta = 1.0$.}
             \label{fig:patterns}
         \end{figure}
+        Our simulations produce (quasi-)stable patterns similar to those seen by Qian He \textit{et al.} \cite{he2011} and Peltom{\"a}ki and Alava \cite{peltomaki08}.
+
     \end{block}
     \hfill
     \begin{block}{Plane Wave Formation}
@@ -170,7 +174,7 @@
             \\
             \subfloat[$\epsilon_m=5.0$]{{\includegraphics[width=0.48\linewidth]{images/mlrps_5_0.jpg} }}
             \subfloat[$\epsilon_m=10.0$]{{\includegraphics[width=0.48\linewidth]{images/mlrps_10_0.jpg} }}
-            \caption{\centering Steady state snapshots. Plane wave formation in $256 \times 512$ lattices. In all cases $\epsilon_m = 2.5, \ \sigma = \mu = 1.0, \ \zeta = 1.0$. The interface is placed at $y = 64$}
+            \caption{\centering Steady state snapshots of plane wave formation in $256 \times 512$ lattices. In all cases $\epsilon_m = 2.5, \ \sigma = \mu = 1.0, \ \zeta = 1.0$. The interface is placed at $y = 64$.}
             \label{fig:plane_waves}
         \end{figure}
     \end{block}
@@ -182,53 +186,57 @@
 \end{textblock}
 
 \begin{textblock}{0.32}(0.67,0.015)
-    \begin{block}{Characteristic Dynamics of the ML Model}
-        The following values were derived analytically by \textit{Reichenbach, et. al.} \cite{reichenbach08} 
-        \begin{align*}
-            \text{Diffusion Constant:} \quad & D = \epsilon_m d^{-1} N^{-2 / d} \\
-                                       \quad & \text{where } d \text{ is the number of spatial dimensions}\\
-                                       \quad & \text{and } N \text{ is the size of the lattice.}\\
-            \text{Constants:} \quad & c_1 = \frac{1}{2}\frac{\mu\sigma}{3\mu + \sigma}, \quad  c_3 = \frac{\sqrt{3}\left(18\mu + 11\sigma\right)}{48\mu + 11\sigma}\\
-            \text{Spreading Velocity:} \quad & v^* = 2 \sqrt{c_1 D}\\
-            \text{Wavelength:} \quad & \lambda = \frac{2\pi c_3 \sqrt{D}}{\sqrt{c_1}\left(1 - \sqrt{1 + c_3^2}\right)}\\
-        \end{align*}
-
-        We use these values to contextualize our measurements in the next section.
-        For the cases shown below we use $d=2$ and $N = W \times H = 2^{17},$ 
-        $\sigma = \mu = \zeta = 1.0 , \text{ and } \epsilon_m = 2.5$
-        This yields theoretical values of $D \approx 9.5 \times 10^{-6}$, $ v^* 
-        \approx 0.00218$, and $ \lambda \approx 0.18$
-    \end{block}
+    %\begin{block}{Characteristic Dynamics of the ML Model}
+    %The following values were derived analytically by \textit{Reichenbach, et. al.} \cite{reichenbach08} 
+    %\begin{align*}
+    %\text{Diffusion Constant:} \quad & D = \epsilon_m d^{-1} N^{-2 / d} \\
+    %\quad & \text{where } d \text{ is the number of spatial dimensions}\\
+    %\quad & \text{and } N \text{ is the size of the lattice.}\\
+    %\text{Constants:} \quad & c_1 = \frac{1}{2}\frac{\mu\sigma}{3\mu + \sigma}, \quad  c_3 = \frac{\sqrt{3}\left(18\mu + 11\sigma\right)}{48\mu + 11\sigma}\\
+    %\text{Spreading Velocity:} \quad & v^* = 2 \sqrt{c_1 D}\\
+    %\text{Wavelength:} \quad & \lambda = \frac{2\pi c_3 \sqrt{D}}{\sqrt{c_1}\left(1 - \sqrt{1 + c_3^2}\right)}\\
+%\end{align*}
+    %
+    %We use these values to contextualize our measurements in the next section.
+    %For the cases shown below we use $d=2$ and $N = W \times H = 2^{17},$ 
+    %$\sigma = \mu = \zeta = 1.0 , \text{ and } \epsilon_m = 2.5$
+        %This yields theoretical values of $D \approx 9.5 \times 10^{-6}$, $ v^* 
+        %\approx 0.00218$, and $ \lambda \approx 0.18$
+    %\end{block}
     \begin{block}{Plane Wave Behavior:}
         \begin{center}
-            \begin{tabular}{c|c|c|c}
-                $\epsilon_m$    & $d_p$ & $v$       & $2 \tau v$ \\
+            \begin{tabular}{c|c|c}
+                $\epsilon_m$    & $d_p$ & $v $       \\%& $2 \tau v$ \\
                 \hline 
-                0.01            & 0.119 & 0.000198  & 0.00178\\
-                2.5             & 0.168 & 0.000206  & 0.00185\\
-                5.0             & 0.168 & 0.000192  & 0.00173\\
-                10.0            & 0.129 & 0.000194  & 0.00175\\
+                0.01            & 0.119 & 0.000198  \\%& 0.00178\\
+                2.5             & 0.168 & 0.000206  \\%& 0.00185\\
+                5.0             & 0.168 & 0.000192  \\%& 0.00173\\
+                10.0            & 0.129 & 0.000194  \\%& 0.00175\\
             \end{tabular}
         \end{center}
         Using plots of density measured parallel to the interface, we visually
-        estimate the permeation distance ($d_p$) and front velocity ($v^\text{num}$)
-        of the plane-waves. We also rescale velocity by $2 \tau$ (where $\tau = \epsilon_m + \sigma + \mu$)
-        in order to account for differnces in how time scaling is handled in \cite{reichenbach08}.
-        Note that, in source, numerical results for spreading velocity deviate from
-        their analytical result by $ \approx 10 \%$. We thus see that, unsurprisingly,
-        plane waves travel at approximatey the characteristic spreading velocity of 
-        the system. We also find that $d_p$ is on the scale of the characteristic 
-        wavelength, reaching a maximum when $\epsilon_r$ is close to$\epsilon_m$. 
+        estimate the permeation distance ($d_p$) and front velocity ($v$)
+        of the plane waves. Reichenbach \textit{et al.} \cite{reichenbach08} showed
+        that the wave front velocity in the May-Leonard model is determined by the 
+        reaction rates. Unsurprisingly, we see that $v$ stays (approximately) constant across our simulations.
+        We also find that $d_p$ seems to be, at least in part, dependant on $\epsilon_r$,
+        reaching a maximum when $\epsilon_r$ is close to $\epsilon_m$. 
+        %We also rescale velocity by $2 \tau$ (where $\tau = \epsilon_m + \sigma + \mu$)
+        %in order to account for differences in how Reichenbach, \textit{et. al.} \cite{reichenbach08} handle time scaling.
+        %Note that their numerical results for spreading velocity also deviate from
+        %their analytical result by $ \approx 10 \%$. We thus see that, unsurprisingly,
+        %plane waves travel at approximately the characteristic spreading velocity of 
+        %the system. 
     \end{block}
     \begin{block}{Interface Density Effects}
         \begin{figure}[h]
             \centering
-            \subfloat[$\epsilon_m=0.1$]{{\includegraphics[width=0.3\linewidth]{images/net_density_0_1.jpg} }}
-            \subfloat[$\epsilon_m=2.5$]{{\includegraphics[width=0.3\linewidth]{images/net_density_2_5.jpg} }}
+            \subfloat[$\epsilon_m=0.1$]{{\includegraphics[width=0.4\linewidth]{images/net_density_0_1.jpg} }}
+            \subfloat[$\epsilon_m=2.5$]{{\includegraphics[width=0.4\linewidth]{images/net_density_2_5.jpg} }}
             \\
-            \subfloat[$\epsilon_m=5.0$]{{\includegraphics[width=0.3\linewidth]{images/net_density_5_0.jpg} }}
-            \subfloat[$\epsilon_m=10.0$]{{\includegraphics[width=0.3\linewidth]{images/net_density_10_0.jpg} }}
-            \caption{\centering Plane wave formation in $256 \times 512$ lattices. In all cases $\epsilon_m = 2.5, \ \sigma = \mu = 1.0, \ \zeta = 1.0$. The interface is placed at $y = 64$}
+            \subfloat[$\epsilon_m=5.0$]{{\includegraphics[width=0.4\linewidth]{images/net_density_5_0.jpg} }}
+            \subfloat[$\epsilon_m=10.0$]{{\includegraphics[width=0.4\linewidth]{images/net_density_10_0.jpg} }}
+            \caption{\centering Plane wave formation in $256 \times 512$ lattices. In all cases $\epsilon_m = 2.5, \ \sigma = \mu = 1.0, \ \zeta = 1.0$. The interface is placed at $y = 64$.}
             \label{fig:void}
         \end{figure}
         One surprising result produced by our simulations is a notable drop in 
@@ -240,10 +248,10 @@
         \begin{itemize}
             \item Visual measurements of the plane wave behavior severly limits both
                   the volume of and accuracy with which we can collect data. 
-                  We will use FFTs to analyze space-time density plots.
-            \item The exact cause of the drop in net density near the interface is 
-                  not yet apparent, and as such this presents us with a clear next
-                  step.
+                  We will use fast fourier transforms to improve our analysis of permeation distance.
+            \item The exact cause of the drop in the net density near the interface is 
+                  not yet fully understood, but is likely related to the suppression
+                  of the overall carrying capacity of the system in a well mixed setting.
         \end{itemize}
     \end{block}
     \begin{block}{References}
