--- a/MonteCarloSim/Untitled2.ipynb
+++ b/MonteCarloSim/Untitled2.ipynb
@@ -473,7 +473,7 @@
    ],
    "source": [
     "fig9, ax9 = plt.subplots(facecolor=\"white\")\n",
-    "ax9.plot(r[1:128], data9[80,1:128], label=\"Height = 256\")\n",
+    "ax9.plot(r[1:128], data9[80;,1:128], label=\"Height = 256\")\n",
     "ax9.plot(r[1:128], data10[80,1:128], label=\"Height = 512\")\n",
     "ax9.plot(r[1:128], data11[80,1:128], label=\"Height = 640\")\n",
     "ax9.plot(r[1:128], data12[80,1:128], label=\"Height = 796\")\n",
