--- a/writing/MarchMeetingPresentation/MarchMeetingPres.tex
+++ b/writing/MarchMeetingPresentation/MarchMeetingPres.tex
@@ -10,7 +10,7 @@
 \setbeamertemplate{enumerate items}[default]
 
 \title{\large Boundary Effects in Stochastic Cyclic Competition Models on a Two-Dimensional Lattice}
-\author{M. Lazarus Arnau, Shannon Serrao, Uwe C. T\"auber}
+\author{M. Lazarus Arnau, Shannon Serrao, Uwe C. T\a"uber}
 \institute
 {
     Department of Physics,\\
@@ -22,56 +22,35 @@
     \frame{\titlepage}
 
     \begin{frame}
-        \frametitle{Introduction}
-        Motivations in Biology and Chemistry
-        \begin{itemize}
-            \item Reproductive strategies in side-blotched lizards\\
-            \item Experiments involving \textit{E. coli}\\
-            \item Belousov-Zhobotinsky Reaction
-        \end{itemize}
-    \end{frame}
+        \frametitle{Models}
 
-    \begin{frame}[t]{Models}
+        Cyclic competition schemes motivated by examples in biology, population dynamics, and chemistry.
+
         \begin{itemize}
-            \item Rock-Paper-Scissors (RPS) Model:
+            \item Rock-Paper-Scissors (RPS) Model
                 \begin{align*}
-                    \text{(Replacement) } & X_nX_{n+1} \xrightarrow{\zeta} X_nX_n\\
-                    \text{(Diffusion) } & XY \xrightarrow{\epsilon_r} YX
+                    (\text{Replacement}) & X_nX_{n+1} \rightarrow{\zeta} X_n X_n\\
+                    (\text{Hopping}) & XY \rightarrow{\epsilon_r} YX \\
                 \end{align*}
-            \item May-Leonard (ML) Model:
+                Forms disordered patches
+
+            \item May-Leonard (ML) Model
                 \begin{align*}
-                    \text{(Predation) } & X_nX_{n+1} \xrightarrow{\sigma} X_n\varnothing\\
-                    \text{(Reproduction) } & X\varnothing \xrightarrow{\mu} XX\\
-                    \text{(Diffusion) } & XY \xrightarrow{\epsilon_m} YX
+                    (\text{Predation}) & X_nX_{n+1} \rightarrow{\sigma} X_n \varnothing \\
+                    (\text{Reproduction}) & X \varnothing \rightarrow{\mu} XX \\
+                    (\text{Hopping}) & XY \rightarrow{\epsilon_r} YX \\
                 \end{align*}
-        \end{itemize} 
-    \end{frame}
-
-    \begin{frame}[t]{Models (cont.) }
-        Insert images of typical behavior.
-    \end{frame}
-
-    \begin{frame}[t]{Simulations}
-        \begin{itemize}
-            \item Toroidal topology\\
-            \item $ 256 \times 512 $ lattice\\
-            \item Primarily ML model\\
-            \item RPS implemented in a narrow (64 cell) strip.\\
+                Forms coherent spiral waves (with certain parameters).
         \end{itemize}
-        Insert renders of the plane-waves.
+        \begin{equation*}
+            \left( X \in \{ A, B, C\} Y \in \{A, B, C, \varnothing\}\right)
+        \end{equation*}
     \end{frame}
 
-    \begin{frame}[t]{Density Effects}
-        Insert vertical density graph\\
-        Insert vertical reaction rate graphs
-    \end{frame}
+    \begin{frame}
+        \frametitle{Plane-waves}
 
-    \begin{frame}[t]{Permeation length}
-        Insert renders of spectrographs
-    \end{frame}
-
-    \begin{frame}[t]{Vertical Correlation Lengths}
-        Insert vertical correlation function graphs
+        planar di
     \end{frame}
 \end{document}
 
